--- a/roster.html
+++ b/roster.html
@@ -184,16 +184,11 @@ B3 ROSTER
 
 <b>Status</b> -     Draft
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+             Final
+          <b><mark>>> One store only open <<</mark></b>
              <!-- col: 14, 38. for <mark>ed line, above, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #5 (Mon 10/08, 19:49)   CP closing for now :(
-                                     Changes for Tue-Fri
-             #4 (Mon 10/08, 12:15)   Monin covered for Bea, Mon.
-                                     Time changes for CP
-             #3 (Sun 09/08, 13:10)   [Final]<span id = "paraChangelog" style = "display:none">
-             #2 (Sun 09/08, 08:18)   [Pending Confirmation]
-             #1 (Sat 08/08, 13:30)   Draft #1</span>
+<b>Changelog</b> -  #1 (Tue 18/08, 07:58)   [One store only open]</span>
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -303,25 +298,21 @@ B3 ROSTER
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
 
-Hey guys, we will try this coming week to see how the trade is. If
-it's really shit mid-week, then we will close the shops. This could
-be any day, e.g. if Monday and Tuesday are not good, we will close
-from Wednesday. Until then, here is the roster !
-
-For the time being, CP will be closing at 13:00.
-
+Hey guys, CP area is no good at the moment so we have decided to
+temporarily close CP. We are now only open at LC. We are also closed
+on tradie RDO days. Will let you guys know if anything changes!
 |=====================================================================|
-| For week starting    Mon       10/08/20                             |
+| For week starting    Mon                                            |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0700-1400|7.0   Nere      /         /         /        /       |
-| b    0700-1400|7.0   Monin     /         /         /        /       |
+| a    0700-1400|7.0   /         /         /         /        /       |
+| b    0700-1400|7.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
-| d    0700-1400|7.0   Yui       Nere      Nere      Nere     Nere    |
+| d    0700-1400|7.0                                                  |
 |                                                                     |
 |=====================================================================|
 
