--- a/roster.html
+++ b/roster.html
@@ -188,7 +188,9 @@ B3 ROSTER
           <b><mark>>> One store only <<</mark></b>
              <!-- col: 14, 38. for <mark>ed line, above, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Tue 18/08, 07:58)   [One store only]</span>
+<b>Changelog</b> -  #2 (Sat 12/09, 16:25)   [Still same...]
+          #1 (Tue 18/08, 07:58)   [One store only]</span>
+
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -298,9 +300,10 @@ B3 ROSTER
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
 
-Hey guys, CP area is no good at the moment so we have decided to
-temporarily close CP. We are now only open at LC. We are also closed
-on tradie RDO days. Will let you guys know if anything changes!
+Hey guys, CP area is no good at the moment so we have decided
+to temporarily close CP. We are now only open at LC. We are
+also closed on tradie RDO days. Will let you guys know if
+anything changes!
 |=====================================================================|
 | For week starting    Mon                                            |
 |=====================================================================|
