--- a/roster.html
+++ b/roster.html
@@ -189,7 +189,7 @@ B3 ROSTER
              <!-- col: 14, 38. for <mark>ed line, above, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
 <b>Changelog</b> -  #2 (Sat 12/09, 16:25)   [Still same...]
-          #1 (Tue 18/08, 07:58)   [One store only]</span>
+             #1 (Tue 18/08, 07:58)   [One store only]</span>
 
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -301,9 +301,8 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 <span id = "paraNotes" style = "display:none"></span>
 
 Hey guys, CP area is no good at the moment so we have decided
-to temporarily close CP. We are now only open at LC. We are
-also closed on tradie RDO days. Will let you guys know if
-anything changes!
+to temporarily close CP. We are now only open at LC. We are also
+closed on tradie RDO days. Will keep you all updated with news!!
 |=====================================================================|
 | For week starting    Mon                                            |
 |=====================================================================|
