--- a/roster.html
+++ b/roster.html
@@ -188,7 +188,8 @@ B3 ROSTER
           <b><mark>>> One store only <<</mark></b>
              <!-- col: 14, 38. for <mark>ed line, above, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sat 12/09, 16:25)   [Still same...]
+<b>Changelog</b> -  #3 (Sun 04/10, 07:59   [Getting busier..]
+             #2 (Sat 12/09, 16:25)   [Still same...]
              #1 (Tue 18/08, 07:58)   [One store only]</span>
 
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
