--- a/roster.html
+++ b/roster.html
@@ -182,14 +182,13 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     Draft
-             Pending Confirmation
+<b>Status</b> -     One store only
+             Draft
+        <b><mark>>> Pending Confirmation <<</mark></b>
              Final
-          <b><mark>>> One store only <<</mark></b>
              <!-- col: 14, 38. for <mark>ed line, above, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sat 12/09, 16:25)   [Still same...]
-             #1 (Tue 18/08, 07:58)   [One store only]</span>
+<b>Changelog</b> -  #1 (Mon 12/10, 18:16)   [Pending Confirmation]</span>
 
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
@@ -314,7 +313,7 @@ closed on tradie RDO days. Will keep you all updated with news!!
 | b    0700-1400|7.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
-| d    0700-1400|7.0                                                  |
+| d    0800-1330|5.5   /        Bea       Sean       Bea      Sean    |
 |                                                                     |
 |=====================================================================|
 
