--- a/roster.html
+++ b/roster.html
@@ -182,9 +182,9 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     One store only
+<b>Status</b> -     <b>One store only</b>
              Draft
-        <b><mark>>> Pending Confirmation <<</mark></b>
+           <b><mark>>> Pending Confirmation <<</mark></b>
              Final
              <!-- col: 14, 38. for <mark>ed line, above, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
