--- a/roster.html
+++ b/roster.html
@@ -314,7 +314,7 @@ closed on tradie RDO days. Will keep you all updated with news!!
 | b    0700-1400|7.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
-| d    0800-1330|5.5   /         /         /         Bea      Sean    |
+| d    0800-1330|5.5   /         /         /         Sean     Bea     |
 |                                                                     |
 |=====================================================================|
 
