--- a/roster.html
+++ b/roster.html
@@ -185,11 +185,13 @@ B3 ROSTER
 <b>Status</b> -     <b>One store only</b>
 
              Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
-             <!-- col: 14, 38. for <mark>ed line, above, "<" starts at 11 -->
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
+             <!-- ABOVE.. for <mark>ed line, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Mon 12/10, 18:16)   [Pending Confirmation]</span>
+<b>Changelog</b> -  #2 (Mon 12/10, 19 :11)   [Final]
+            #1 (Mon 12/10, 18:16)   [Pending Confirmation]</span>
+             <!-- ABOVE.. col: 14 #x, 38 [x] -->
 
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
