--- a/roster.html
+++ b/roster.html
@@ -184,13 +184,12 @@ B3 ROSTER
 
 <b>Status</b> -     <b>One store only</b>
 
-             Draft
+          <b><mark>>> Draft <<</mark></b>
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Mon 12/10, 19 :11)   [Final]
-            #1 (Mon 12/10, 18:16)   [Pending Confirmation]</span>
+<b>Changelog</b> -  #1 (Sat 17/10, 09:25)   [Draft]</span>
              <!-- ABOVE.. col: 14 #x, 38 [x] -->
 
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -306,7 +305,7 @@ Hey guys, CP area is no good at the moment so we have decided
 to temporarily close CP. We are now only open at LC. We are also
 closed on tradie RDO days. Will keep you all updated with news!!
 |=====================================================================|
-| For week starting    Mon                                            |
+| For week starting    Mon       19/10/2020                           |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
@@ -316,10 +315,24 @@ closed on tradie RDO days. Will keep you all updated with news!!
 | b    0700-1400|7.0   /         /         /         /        /       |
 |                                                                     |
 |       LC                                                            |
-| d    0800-1330|5.5   /         /         /         Sean     Bea     |
+| d    0800-1400|6.0   Bea       Bea       Bea       Sean     /       |
 |                                                                     |
 |=====================================================================|
 
+|=====================================================================|
+| For week starting    Mon       26/10/2020                           |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0700-1400|7.0   /         /         /         /        /       |
+| b    0700-1400|7.0   /         /         /         /        /       |
+|                                                                     |
+|       LC                                                            |
+| d    0800-1400|6.0   Bea       Bea       Bea       Sean     Sean    |
+|                                                                     |
+|=====================================================================|
 </em>
 <!--
 |=====================================================================|
