--- a/roster.html
+++ b/roster.html
@@ -184,12 +184,13 @@ B3 ROSTER
 
 <b>Status</b> -     <b>One store only</b>
 
-          <b><mark>>> Draft <<</mark></b>
-             Pending Confirmation
+             Draft
+          <b><mark>>> Pending Confirmation <<</mark></b>
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 17/10, 09:25)   [Draft]</span>
+<b>Changelog</b> -  #2 (Sun 18/10, 13:20)   [Pending Confirmation]
+             #1 (Sat 17/10, 09:25)   [Draft]</span>
              <!-- ABOVE.. col: 14 #x, 38 [x] -->
 
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
