--- a/roster.html
+++ b/roster.html
@@ -185,11 +185,12 @@ B3 ROSTER
 <b>Status</b> -     <b>One store only</b>
 
              Draft
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 18/10, 13:20)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Sun 18/10, 14:50)   [Final]<span id = "paraChangelog" style = "display:none">
+             #2 (Sun 18/10, 13:20)   [Pending Confirmation]
              #1 (Sat 17/10, 09:25)   [Draft]</span>
              <!-- ABOVE.. col: 14 #x, 38 [x] -->
 
@@ -305,6 +306,8 @@ notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" o
 Hey guys, CP area is no good at the moment so we have decided
 to temporarily close CP. We are now only open at LC. We are also
 closed on tradie RDO days. Will keep you all updated with news!!
+
+Friday - Closed for "Friday before Grand Final day" 
 |=====================================================================|
 | For week starting    Mon       19/10/2020                           |
 |=====================================================================|
