--- a/roster.html
+++ b/roster.html
@@ -184,14 +184,12 @@ B3 ROSTER
 
 <b>Status</b> -     <b>One store only</b>
 
-             Draft
+          <b><mark>>> Draft  <<</mark></b>
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 18/10, 14:50)   [Final]<span id = "paraChangelog" style = "display:none">
-             #2 (Sun 18/10, 13:20)   [Pending Confirmation]
-             #1 (Sat 17/10, 09:25)   [Draft]</span>
+<b>Changelog</b> -  #1 (Fri 23/10, 12:36)   [Draft]</span>
              <!-- ABOVE.. col: 14 #x, 38 [x] -->
 
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
