--- a/roster.html
+++ b/roster.html
@@ -184,12 +184,13 @@ B3 ROSTER
 
 <b>Status</b> -     <b>One store only</b>
 
-          <b><mark>>> Draft  <<</mark></b>
-             Pending Confirmation
+             Draft 
+          <b><mark>>> Pending Confirmation <<</mark></b>
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Fri 23/10, 12:36)   [Draft]</span>
+<b>Changelog</b> -  #2 (Sun 25/10, 08:22)   [Pending Confirmation]
+             #1 (Fri 23/10, 12:36)   [Draft]</span>
              <!-- ABOVE.. col: 14 #x, 38 [x] -->
 
 <span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -305,22 +306,6 @@ Hey guys, CP area is no good at the moment so we have decided
 to temporarily close CP. We are now only open at LC. We are also
 closed on tradie RDO days. Will keep you all updated with news!!
 
-Friday - Closed for "Friday before Grand Final day" 
-|=====================================================================|
-| For week starting    Mon       19/10/2020                           |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0700-1400|7.0   /         /         /         /        /       |
-| b    0700-1400|7.0   /         /         /         /        /       |
-|                                                                     |
-|       LC                                                            |
-| d    0800-1400|6.0   Bea       Bea       Bea       Sean     /       |
-|                                                                     |
-|=====================================================================|
-
 |=====================================================================|
 | For week starting    Mon       26/10/2020                           |
 |=====================================================================|
@@ -335,6 +320,25 @@ Friday - Closed for "Friday before Grand Final day"
 | d    0800-1400|6.0   Bea       Bea       Bea       Sean     Sean    |
 |                                                                     |
 |=====================================================================|
+
+Mon - Tradie RDO 
+Tue - Melbourne Cup
+Wed - Tradie RDO
+|=====================================================================|
+| For week starting    Mon       02/11/2020   DRAFT                   |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0700-1400|7.0   /         /         /         /        /       |
+| b    0700-1400|7.0   /         /         /         /        /       |
+|                                                                     |
+|       LC                                                            |
+| d    0800-1400|6.0   /         /         /         Sean     Sean    |
+|                                                                     |
+|=====================================================================|
+
 </em>
 <!--
 |=====================================================================|
