--- a/roster.html
+++ b/roster.html
@@ -185,11 +185,12 @@ B3 ROSTER
 <b>Status</b> -     <b>One store only</b>
 
              Draft 
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 25/10, 08:22)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Sun 25/10, 14:59)   [Final]
+             #2 (Sun 25/10, 08:22)   [Pending Confirmation]
              #1 (Fri 23/10, 12:36)   [Draft]</span>
              <!-- ABOVE.. col: 14 #x, 38 [x] -->
 
