--- a/roster.html
+++ b/roster.html
@@ -189,7 +189,7 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 25/10, 14:59)   [Final]<span id = "paraChangelog" style = "display:none"></span>
+<b>Changelog</b> -  #3 (Sun 25/10, 14:59)   [Final]<span id = "paraChangelog" style = "display:none">
              #2 (Sun 25/10, 08:22)   [Pending Confirmation]
              #1 (Fri 23/10, 12:36)   [Draft]</span>
              <!-- ABOVE.. col: 14 #x, 38 [x] -->
