--- a/roster.html
+++ b/roster.html
@@ -189,7 +189,8 @@ B3 ROSTER
           <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #3 (Sun 25/10, 14:59)   [Final]<span id = "paraChangelog" style = "display:none">
+<b>Changelog</b> -  #4 (Thu 29/10, 07:50)   Prepared roster for 2 stores !
+             #3 (Sun 25/10, 14:59)   [Final]<span id = "paraChangelog" style = "display:none">
              #2 (Sun 25/10, 08:22)   [Pending Confirmation]
              #1 (Fri 23/10, 12:36)   [Draft]</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -320,9 +321,12 @@ closed on tradie RDO days. Will keep you all updated with news!!
 |                                                                     |
 |=====================================================================|
 
+
 Mon - Tradie RDO 
 Tue - Melbourne Cup
-Wed - Tradie RDO
+
+& Thu, Fri 
+  Sean LC 0700-1500 |8.0 
 |=====================================================================|
 | For week starting    Mon       02/11/2020   DRAFT                   |
 |=====================================================================|
@@ -330,35 +334,34 @@ Wed - Tradie RDO
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0700-1400|7.0   /         /         /         /        /       |
-| b    0700-1400|7.0   /         /         /         /        /       |
+| a    0730-1530|8.0   /         /         Nere      Nere     Nere    |
+| b    0730-1530|8.0   /         /         Millie    Bea      Bea     |
 |                                                                     |
 |       LC                                                            |
-| d    0800-1400|6.0   /         /         /         Sean     Sean    |
+| c    0700-1200|5.0   /         /         Sean      /        /       |
+| d    0900-1500|6.0   /         /         Bea       Sean&    Sean&   |
 |                                                                     |
 |=====================================================================|
 
-</em>
-<!--
+& Thu, Fri 
+  Sean LC 0700-1500 |8.0 
 |=====================================================================|
-| For week starting    Mon       23/03/20                             |
+| For week starting    Mon       09/11/2020   DRAFT                   |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0700-1630|9.5   Nere      Nere      Nere      Nere     Nere    |
-| b    0700-1530|8.5   Millie    Millie    Sean      Millie   Millie  |
-| f'   0730-1430|7.0   Luna      Sean      Bea       Sean     Sean    |
-| g    1030-1630|6.0   Sabrina   Sabrina   Sabrina   Sabrina  Bea     |
+| a    0730-1530|8.0   Nere      Nere      Nere      Nere     Nere    |
+| b    0730-1530|8.0   Millie    Millie    Millie    Bea      Bea     |
 |                                                                     |
 |       LC                                                            |
-| c    0600-1500|9.0   Yui       Yui       Yui       Yui      Yui     |
-| d    0600-0900|3.0   Jean      Jean      Jean      Jean     Jean    |
-| e    0600-1430|8.5   Bea       Madi      Madi      Bea      Madi    |
-| f    0600-0730|1.5   Luna      Sean      Bea       Sean     Sean    |
+| c    0700-1200|5.0   Sean      Sean      Sean      /        /       |
+| d    0900-1500|6.0   Bea       Bea       Bea       Sean&    Sean&   |
 |                                                                     |
-|=====================================================================|-->
+|=====================================================================|
+
+</em>
 </span></span></div>
 </pre>
 </body>
