--- a/roster.html
+++ b/roster.html
@@ -322,11 +322,14 @@ closed on tradie RDO days. Will keep you all updated with news!!
 |=====================================================================|
 
 
-Mon - Tradie RDO 
-Tue - Melbourne Cup
+Shops closed: 
+  Mon - Tradie RDO 
+  Tue - Melbourne Cup
 
-& Thu, Fri 
-  Sean LC 0700-1500 |8.0 
+# Wed
+   Bea  LC 0700-1500 |8.0
+& Thu, Fri  
+   Sean LC 0700-1500 |8.0 
 |=====================================================================|
 | For week starting    Mon       02/11/2020   DRAFT                   |
 |=====================================================================|
@@ -338,8 +341,8 @@ Tue - Melbourne Cup
 | b    0730-1530|8.0   /         /         Millie    Bea      Bea     |
 |                                                                     |
 |       LC                                                            |
-| c    0700-1200|5.0   /         /         Sean      /        /       |
-| d    0900-1500|6.0   /         /         Bea       Sean&    Sean&   |
+| c    0700-1130|4.5+  /         /         []        /        /       |
+| d    0900-1500|6.0   /         /         Bea#      Sean&    Sean&   |
 |                                                                     |
 |=====================================================================|
 
@@ -356,7 +359,7 @@ Tue - Melbourne Cup
 | b    0730-1530|8.0   Millie    Millie    Millie    Bea      Bea     |
 |                                                                     |
 |       LC                                                            |
-| c    0700-1200|5.0   Sean      Sean      Sean      /        /       |
+| c    0700-1130|4.5+  Sean      Sean      Sean      /        /       |
 | d    0900-1500|6.0   Bea       Bea       Bea       Sean&    Sean&   |
 |                                                                     |
 |=====================================================================|
