--- a/roster.html
+++ b/roster.html
@@ -338,7 +338,7 @@ Shops closed:
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|8.0   /         /         Nere      Nere     Nere    |
-| b    0730-1530|8.0   /         /         Millie    Bea      Bea     |
+| b    0730-1530|8.0   /         /         []        Bea      Bea     |
 |                                                                     |
 |       LC                                                            |
 | c    0700-1130|4.5+  /         /         []        /        /       |
@@ -356,7 +356,7 @@ Shops closed:
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|8.0   Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Millie    Millie    Millie    Bea      Bea     |
+| b    0730-1530|8.0   Millie    Millie    Millie    Bea      []      |
 |                                                                     |
 |       LC                                                            |
 | c    0700-1130|4.5+  Sean      Sean      Sean      /        /       |
