--- a/roster.html
+++ b/roster.html
@@ -326,10 +326,10 @@ Shops closed:
   Mon - Tradie RDO 
   Tue - Melbourne Cup
 
-# Wed
-   Bea  LC 0700-1500 |8.0
-& Thu, Fri  
-   Sean LC 0700-1500 |8.0 
+Wed
+   Bea #   LC 0700-1500 |8.0
+Thu, Fri  
+   Sean &  LC 0700-1500 |8.0 
 |=====================================================================|
 | For week starting    Mon       02/11/2020   DRAFT                   |
 |=====================================================================|
@@ -346,8 +346,8 @@ Shops closed:
 |                                                                     |
 |=====================================================================|
 
-& Thu, Fri 
-  Sean LC 0700-1500 |8.0 
+Thu, Fri 
+  Sean &  LC 0700-1500 |8.0 
 |=====================================================================|
 | For week starting    Mon       09/11/2020   DRAFT                   |
 |=====================================================================|
