--- a/roster.html
+++ b/roster.html
@@ -182,17 +182,13 @@ alt="shopify traffic stats"></a></div></noscript>
 
 B3 ROSTER
 
-<b>Status</b> -     <b>One store only</b>
-
-             Draft 
+<b>Status</b> -
+          <b><mark>>> Draft <<</mark></b> 
              Pending Confirmation
-          <b><mark>>> Final <<</mark></b>
+             Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #4 (Thu 29/10, 07:50)   Prepared roster for 2 stores !
-             #3 (Sun 25/10, 14:59)   [Final]<span id = "paraChangelog" style = "display:none">
-             #2 (Sun 25/10, 08:22)   [Pending Confirmation]
-             #1 (Fri 23/10, 12:36)   [Draft]</span>
+<b>Changelog</b> -  #1 (Sat 31/10, 08:55)   [Draft]</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -302,34 +298,12 @@ B3 ROSTER
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
 
-Hey guys, CP area is no good at the moment so we have decided
-to temporarily close CP. We are now only open at LC. We are also
-closed on tradie RDO days. Will keep you all updated with news!!
-
-|=====================================================================|
-| For week starting    Mon       26/10/2020                           |
-|=====================================================================|
-| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
-|---------------------------------------------------------------------|
-|=====================================================================|
-|       CP                                                            |
-| a    0700-1400|7.0   /         /         /         /        /       |
-| b    0700-1400|7.0   /         /         /         /        /       |
-|                                                                     |
-|       LC                                                            |
-| d    0800-1400|6.0   Bea       Bea       Bea       Sean     Sean    |
-|                                                                     |
-|=====================================================================|
-
-
 Shops closed: 
   Mon - Tradie RDO 
   Tue - Melbourne Cup
 
-Wed
-   Bea #   LC 0700-1500 |8.0
-Thu, Fri  
-   Sean &  LC 0700-1500 |8.0 
+Wed       - Bea  #  LC 0700-1500 |8.0
+Thu, Fri  - Sean &  LC 0700-1500 |8.0 
 |=====================================================================|
 | For week starting    Mon       02/11/2020   DRAFT                   |
 |=====================================================================|
@@ -346,8 +320,7 @@ Thu, Fri
 |                                                                     |
 |=====================================================================|
 
-Thu, Fri 
-  Sean &  LC 0700-1500 |8.0 
+Thu, Fri  - Sean &  LC 0700-1500 |8.0 
 |=====================================================================|
 | For week starting    Mon       09/11/2020   DRAFT                   |
 |=====================================================================|
