--- a/roster.html
+++ b/roster.html
@@ -187,7 +187,8 @@ B3 ROSTER
              Final
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #1 (Sat 31/10, 08:55)   [Draft]</span>
+<b>Changelog</b> -  #2 (Sun 01/11, 06:58)   Draft #2
+             #1 (Sat 31/10, 08:55)   [Draft]</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
 
 <b>Photos</b> -     <a href="https://www.flickr.com/gp/131712031@N02/Ft83xa">2014</a>, <a href="https://www.flickr.com/gp/131712031@N02/C314Q0">2015</a>, <a href="https://www.flickr.com/gp/131712031@N02/vtX8i9" target="_blank">2016</a>, <!--<a href="https://flic.kr/s/aHskUctFbt" target="_blank">2017</a>--><a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303137#Albums/album_62332032303137" target="_blank"><b>2017</b></a>, <a href="https://unit-zero.myDS.me/photo/?t=Albums/album_62332032303138#Albums/album_62332032303138" target="_blank"><b>2018</b></a>, <a href="https://unit-zero.myDS.me:5001/mo/sharing/BjnSIvuRa" target="_blank"><b>2019</b></a><span id="LastUpdatePhotos">(checking...)</span>
@@ -310,12 +311,13 @@ Thu, Fri  - Sean &  LC 0700-1500 |8.0
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0730-1530|8.0   /         /         Nere      Nere     Nere    |
-| b    0730-1530|8.0   /         /         []        Bea      Bea     |
+| a    0730-1530|      /         /         Nere      Nere     Nere    |
+| b    0730-1530|8.0   /         /         Mum       Bea      Bea     |
 |                                                                     |
 |       LC                                                            |
-| c    0700-1130|4.5+  /         /         []        /        /       |
-| d    0900-1500|6.0   /         /         Bea#      Sean&    Sean&   |
+| c    0630-1500|      /         /         Mony      Mony     Mony    |
+| d    0700-1130|4.5+  /         /         []        /        /       |
+| e    0900-1500|6.0   /         /         Bea#      Sean&    Sean&   |
 |                                                                     |
 |=====================================================================|
 
@@ -327,12 +329,13 @@ Thu, Fri  - Sean &  LC 0700-1500 |8.0
 |---------------------------------------------------------------------|
 |=====================================================================|
 |       CP                                                            |
-| a    0730-1530|8.0   Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Millie    Millie    Millie    Bea      []      |
+| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
+| b    0730-1530|8.0   Millie    Millie    Millie    Mum      Bea     |
 |                                                                     |
 |       LC                                                            |
-| c    0700-1130|4.5+  Sean      Sean      Sean      /        /       |
-| d    0900-1500|6.0   Bea       Bea       Bea       Sean&    Sean&   |
+| c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
+| e    0700-1130|4.5+  Sean      Sean      Sean      /        /       |
+| e    0900-1500|6.0   Bea       Bea       Bea       Sean&    Sean&   |
 |                                                                     |
 |=====================================================================|
 
