--- a/roster.html
+++ b/roster.html
@@ -302,10 +302,10 @@ Shops closed:
   Mon - Tradie RDO 
   Tue - Melbourne Cup
 
-Wed       - Bea  #  LC 0700-1500 |8.0
-Thu, Fri  - Sean &  LC 0700-1500 |8.0 
+Wed, Thu, Fri - 
+  &  LC 0700-1500 |8.0 
 |=====================================================================|
-| For week starting    Mon       02/11/2020   DRAFT                   |
+| For week starting    Mon       02/11/2020                           |
 |=====================================================================|
 | Pos   Time           Mon       Tue       Wed       Thu      Fri     |
 |---------------------------------------------------------------------|
@@ -316,12 +316,13 @@ Thu, Fri  - Sean &  LC 0700-1500 |8.0
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      /         /         Mony      Mony     Mony    |
-| d    0700-1130|4.5+  /         /         []        /        /       |
-| e    0900-1500|6.0   /         /         Bea#      Sean&    Sean&   |
+| d    0700-1130|4.5   /         /         []        []       []      |
+| e    0900-1500|6.0   /         /         Bea&      Sean&    Sean&   |
 |                                                                     |
 |=====================================================================|
 
-Thu, Fri  - Sean &  LC 0700-1500 |8.0 
+Thu, Fri  - 
+  &  LC 0700-1500 |8.0 
 |=====================================================================|
 | For week starting    Mon       09/11/2020   DRAFT                   |
 |=====================================================================|
@@ -334,7 +335,7 @@ Thu, Fri  - Sean &  LC 0700-1500 |8.0
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1130|4.5+  Sean      Sean      Sean      /        /       |
+| e    0700-1130|4.5   Sean      Sean      Sean      /        /       |
 | e    0900-1500|6.0   Bea       Bea       Bea       Sean&    Sean&   |
 |                                                                     |
 |=====================================================================|
