--- a/roster.html
+++ b/roster.html
@@ -298,6 +298,9 @@ B3 ROSTER
 notes        </b><span id = "mydivNotes" style = "cursor:hand;color:royalblue" onclick = "expandContractNotes();">[+] </span> <span id="LastUpdateLegend"> (checking..) </span>
 <span id = "paraNotes" style = "display:none"></span>
 
+[]: No one available
+/ : No one rostered
+
 Shops closed: 
   Mon - Tradie RDO 
   Tue - Melbourne Cup
