--- a/roster.html
+++ b/roster.html
@@ -344,6 +344,24 @@ Thu, Fri  -
 |                                                                     |
 |=====================================================================|
 
+Thu, Fri  - 
+  &  LC 0700-1500 |8.0 
+|=====================================================================|
+| For week starting    Mon       16/11/2020   DRAFT                   |
+|=====================================================================|
+| Pos   Time           Mon       Tue       Wed       Thu      Fri     |
+|---------------------------------------------------------------------|
+|=====================================================================|
+|       CP                                                            |
+| a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
+| b    0730-1530|8.0   Millie    Millie    Millie    Mum      Bea     |
+|                                                                     |
+|       LC                                                            |
+| c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
+| e    0700-1130|4.5   Sean      Sean      Sean      /        /       |
+| e    0900-1500|6.0   Bea       Bea       Bea       Sean&    Sean&   |
+|                                                                     |
+|=====================================================================|
 </em>
 </span></span></div>
 </pre>
