--- a/roster.html
+++ b/roster.html
@@ -339,7 +339,7 @@ Thu, Fri  -
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1130|4.5   Sean      Sean      Sean      /        /       |
+| e    0700-1130|4.5   Sean      Sean      Sean      []       []      |
 | e    0900-1500|6.0   Bea       Bea       Bea       Sean&    Sean&   |
 |                                                                     |
 |=====================================================================|
@@ -358,7 +358,7 @@ Thu, Fri  -
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1130|4.5   Sean      Sean      Sean      /        /       |
+| e    0700-1130|4.5   Sean      Sean      Sean      []       []      |
 | e    0900-1500|6.0   Bea       Bea       Bea       Sean&    Sean&   |
 |                                                                     |
 |=====================================================================|
