--- a/roster.html
+++ b/roster.html
@@ -183,11 +183,12 @@ alt="shopify traffic stats"></a></div></noscript>
 B3 ROSTER
 
 <b>Status</b> -     Draft 
-          <b><mark>>> Pending Confirmation <<</mark></b>
-             Final
+             Pending Confirmation
+          <b><mark>>> Final <<</mark></b>
              <!-- ABOVE.. for <mark>ed line, "<" starts at 11 . /// DRAFT "<" is 18 -->
 <!-- <span id = "paraChangelog" style = "display:none">    -->
-<b>Changelog</b> -  #2 (Sun 01/11, 06:58)   [Pending Confirmation]
+<b>Changelog</b> -  #3 (Tue 03/11, 12:11)   [Final]<span id = "paraChangelog" style = "display:none">
+             #2 (Sun 01/11, 06:58)   [Pending Confirmation]
                                      Draft #2
              #1 (Sat 31/10, 08:55)   Draft #1</span>
 <!-- ABOVE.. col: 14 #x, 38 [x] --><span id = "mydivChangelog" style = "cursor:hand;color:royalblue" onclick = "expandContractChangelog();">             [+]</span>
@@ -344,7 +345,9 @@ Thu, Fri  -
 |                                                                     |
 |=====================================================================|
 
-Thu, Fri  - 
+Away - 
+  Bea - Tue
+Tue, Thu, Fri  - 
   &  LC 0700-1500 |8.0 
 |=====================================================================|
 | For week starting    Mon       16/11/2020   DRAFT                   |
@@ -354,12 +357,12 @@ Thu, Fri  -
 |=====================================================================|
 |       CP                                                            |
 | a    0730-1530|      Nere      Nere      Nere      Nere     Nere    |
-| b    0730-1530|8.0   Millie    Millie    Millie    Mum      Bea     |
+| b    0730-1530|8.0   Millie    Millie    Millie    Bea      Bea     |
 |                                                                     |
 |       LC                                                            |
 | c    0630-1500|      Mony      Mony      Mony      Mony     Mony    |
-| e    0700-1130|4.5   Sean      Sean      Sean      []       []      |
-| e    0900-1500|6.0   Bea       Bea       Bea       Sean&    Sean&   |
+| e    0700-1130|4.5   Sean      []        Sean      []       []      |
+| e    0900-1500|6.0   Bea       Sean&     Bea       Sean&    Sean&   |
 |                                                                     |
 |=====================================================================|
 </em>
